tests/ui/traits/next-solver/cycles/coinduction/only-one-coinductive-step-needed-trait.current.stderr
error[E0275]: overflow evaluating the requirement `u32: SendIndir<Foo<u32>>`
  --> $DIR/only-one-coinductive-step-needed-trait.rs:24:5
   |
LL |     is_send::<Foo<u32>>();
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
note: required for `Foo<u32>` to implement `Send`
  --> $DIR/only-one-coinductive-step-needed-trait.rs:17:35
   |
LL | unsafe impl<T: SendIndir<Foo<T>>> Send for Foo<T> {}
   |                -----------------  ^^^^     ^^^^^^
   |                |
   |                unsatisfied trait bound introduced here
note: required by a bound in `is_send`
  --> $DIR/only-one-coinductive-step-needed-trait.rs:22:15
   |
LL | fn is_send<T: Send>() {}
   |               ^^^^ required by this bound in `is_send`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0275`.
